Add more fields for figshare creation
